bug with align items

--- a/FLEXBOX/style.css
+++ b/FLEXBOX/style.css
@@ -99,4 +99,21 @@ body{
     height: 500px;
     width: 300px;
 }
-
+.ai{
+    display: flex ;
+    width: 500px;
+    hegiht:300px;
+    background-color: olive;
+    border-top:2px solid navy;
+    flex-flow: row wrap;
+    margin: 5px;
+}
+.ai-start{
+    align-items: flex-start;
+}
+.ai-end{
+    align-items:flex-end;
+}
+.ai-center{
+    align-items: center;
+}
